Bug 1471107 - Get rid of assertion and handle the already-unsuppressed displayport case in PresShell. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D2130